fix wrong examples style on mobile

--- a/examples/src/js/components/examples/style.scss
+++ b/examples/src/js/components/examples/style.scss
@@ -58,7 +58,7 @@
 }
 
 .demo-methods {
-  padding: 21px 360px 0 0;
+  padding: 21px 0px 0 0;
 }
 
 .demo-methods .mark {
